@@ -1,4 +1,6 @@
 - 2008.1 logo (the good one)
+- enable to restore the system through rsnapshot if giving "restore"
+  on cmdline
 - fix broken help because of s/pt_BR/pt_br/ change in file names (#36774)
 
 Version 10.26 - 2 April 2008
